[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/drone.gd" type="Script" id=1]
[ext_resource path="res://visuals/sprite_sheets/32-bit-sprite-sheet-CHARACTERS.png" type="Texture" id=2]
[ext_resource path="res://audio/sizzle1.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 4, 6.5 )

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 0, 1, 2 ]
}

[node name="drone" type="KinematicBody2D"]
collision_layer = 31
collision_mask = 31
script = ExtResource( 1 )
speed = 80
attack = 1
hp = 3
canMirror = true
collision_shape = NodePath("CollisionShape2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.5 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 4
vframes = 2
region_enabled = true
region_rect = Rect2( 432, 0, 64, 32 )

[node name="sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 2.38419e-07, 1.5 )
scale = Vector2( 0.4, 0.65 )

[connection signal="finished" from="sfx" to="." method="_on_sfx_finished"]
[connection signal="viewport_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
